--- a/NuGet.config
+++ b/NuGet.config
@@ -11,6 +11,6 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
-    <add key="Oxide" value="https://www.myget.org/F/oxide" />
+    <add key="Oxide" value="https://www.myget.org/f/oxide" />
   </packageSources>
 </configuration>
