--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -109,10 +109,8 @@
       <PatchedFiles Include="$(ProjectDir)\Dependencies\Patched\$(ManagedDir)\Facepunch.Console.dll" />
       <PatchedFiles Include="$(ProjectDir)\Dependencies\Patched\$(ManagedDir)\Facepunch.Rcon.dll" />
       <ContentFiles Include="$(SolutionDir)\packages\oxide.csharp\**\lib\any\*.*" />
-      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\Mono.Data.Tds.dll" />
-      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\System.Data.dll" />
-      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\System.Drawing.dll" />
-      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\System.Transactions.dll" />
+      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\*.dll" />
+      <ContentFiles Include="$(SolutionDir)\packages\oxide.references\**\lib\any\net46\*.*" />
       <ContentFiles Include="$(SolutionDir)\packages\oxide.mysql\**\lib\any\MySql.*.dll; $(SolutionDir)\packages\oxide.mysql\**\lib\any\System.*.dll" />
       <ContentFiles Include="$(SolutionDir)\packages\oxide.mysql\**\lib\$(TargetFramework)\*.*" />
       <ContentFiles Include="$(SolutionDir)\packages\oxide.sqlite\**\lib\any\*.*; $(SolutionDir)\packages\oxide.sqlite\**\lib\$(TargetFramework)\*.*" />
