--- a/nuget.config
+++ b/nuget.config
@@ -11,6 +11,7 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
+    <add key="uMod" value="https://www.myget.org/f/umod" />
     <add key="Oxide" value="https://www.myget.org/f/oxide" />
     <add key="Local" value="%USERPROFILE%\.nuget\packages" />
   </packageSources>
